--- a/pe.com.edu.siaa.core.bp/.settings/org.eclipse.wst.common.component
+++ b/pe.com.edu.siaa.core.bp/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="2.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
 	<wb-module deploy-name="pe.com.edu.siaa.core.bp">
 		<wb-resource deploy-path="/" source-path="src/main/resources"/>
 		<wb-resource deploy-path="/" source-path="src/main/java"/>
+        <wb-resource deploy-path="/" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
 		<dependent-module deploy-path="../" handle="module:/resource/pe.com.edu.siaa.core.be.client/pe.com.edu.siaa.core.be.client">
 			<dependency-type>uses</dependency-type>
 		</dependent-module>
